# bookforge-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt
.github/: RELEASES.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
scripts/: __init__.py  batch_manager.py  batch_pipeline.py  categories.py  cover_generator.py  email_delivery.py  generate_book.py  kdp_upload.py  niche_research.py  sales_stats.py  scheduler.py  txt_to_docx.py  txt_to_epub.py  utils.py  webhooks.py  zip_export.py
tests/: __init__.py  test_batch_manager.py  test_batch_pipeline.py  test_categories.py  test_cover_generator.py  test_email_delivery.py  test_generate_book.py  test_kdp_upload.py  test_pipeline.py  test_sales_stats.py  test_scheduler.py  test_txt_to_docx.py  test_txt_to_epub.py  test_utils.py  test_webhooks.py  test_zip_export.py
web/: __init__.py  app.py
web/static/: app.js  categories.js  jobs.js  tools.js
web/templates/: base.html  categories.html  index.html  job.html  jobs.html  research.html  tools.html
