[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bookforge-ai"
version = "1.0.0"
description = "AI-powered book publishing pipeline — NovelClaw → EPUB → Amazon KDP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "George Pricop", email = "george@ilearn-lab.com" }
]
keywords = [
  "kdp", "amazon", "epub", "ai", "novel",
  "novelclaw", "book", "publishing", "playwright", "deepseek"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Internet",
]
dependencies = [
  "ebooklib>=0.18",
  "Pillow>=10.0",
  "requests>=2.31",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "aiohttp>=3.9",
  "rich>=13.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
]

[project.scripts]
bookforge = "pipeline:app"

[project.urls]
Homepage = "https://github.com/Gzeu/bookforge-ai"
Repository = "https://github.com/Gzeu/bookforge-ai"
Issues = "https://github.com/Gzeu/bookforge-ai/issues"
Changelog = "https://github.com/Gzeu/bookforge-ai/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
