[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bookforge-ai"
version = "1.4.0"
description = "AI-powered book publishing pipeline — NovelClaw → EPUB/DOCX → Amazon KDP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "George Pricop", email = "george@ilearn-lab.com" }
]
keywords = ["kdp", "amazon", "epub", "docx", "ai", "novel", "bookforge"]
dependencies = [
  "ebooklib>=0.18",
  "Pillow>=10.0",
  "requests>=2.31",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "aiohttp>=3.9",
  "rich>=13.0",
  "typer>=0.9",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "jinja2>=3.1",
  "python-docx>=1.1"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/Gzeu/bookforge-ai"
Repository = "https://github.com/Gzeu/bookforge-ai"
Issues = "https://github.com/Gzeu/bookforge-ai/issues"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
