[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookforge-ai"
version = "1.5.2"
description = "AI-powered book publishing pipeline — NovelClaw → EPUB/DOCX → Amazon KDP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "George Pricop", email = "george@ilearn-lab.com" }
]
keywords = ["kdp", "amazon", "epub", "docx", "ai", "novel", "bookforge"]
dependencies = [
  "ebooklib>=0.18",
  "Pillow>=10.0",
  "requests>=2.31",
  "playwright>=1.40",
  "python-dotenv>=1.0",
  "aiohttp>=3.9",
  "rich>=13.0",
  "typer>=0.9",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "jinja2>=3.1",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/Gzeu/bookforge-ai"
Repository = "https://github.com/Gzeu/bookforge-ai"
Issues = "https://github.com/Gzeu/bookforge-ai/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "web*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
